# ifc-inspector

./: .gitmodules  CMakeLists.txt
lib/reflifc/: CMakeLists.txt
lib/reflifc/include/reflifc/: ArrayType.h  Declaration.h  DyadExpression.h  Enumeration.h  Enumerator.h  Expression.h  Field.h  FilteredViews.h  Literal.h  Module.h  Name.h  Namespace.h  ScopeDeclaration.h  Struct.h  SyntaticType.h  TemplateDeclaration.h  Type.h  Variable.h
lib/reflifc/src/: ArrayType.cpp  Declaration.cpp  DyadExpression.cpp  Enumeration.cpp  Enumerator.cpp  Expression.cpp  Field.cpp  Name.cpp  ScopeDeclaration.cpp  Struct.cpp  SyntaticType.cpp  TemplateDeclaration.cpp  Type.cpp  Variable.cpp
resources/: build.cmd  ifc-reader-interface.h
src/: commander.cpp  commander.h  commander.ixx  embedfile.cpp  main.cpp  schema.cpp  schema.h
